azure/assets/network.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "Azure_vnet_bosh",
      "metadata": {
        "description": "name of the virtual network"
      }
    },
    "virtualNetworkPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "the CIDR block of the azure virtual network"
      }
    },
    "subnetNameForBosh": {
      "type": "string",
      "defaultValue": "Azure_bosh_subnet",
      "metadata": {
        "description": "name of the first subnet for Bosh"
      }
    },
    "secondSubnetNameForBosh": {
      "type": "string",
      "defaultValue": "Azure_bosh_subnet_2",
      "metadata": {
        "description": "name of the second subnet for Bosh"
      }
    },
    "boshSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
        "description": "the CIDR block of the first subnet for Bosh"
      }
    },
    "boshSecondSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.1.0/24",
      "metadata": {
        "description": "the CIDR block of the second subnet for Bosh"
      }
    },
    "subnetNameForCloudFoundry": {
      "type": "string",
      "defaultValue": "Azure_cf_subnet",
      "metadata": {
        "description": "name of the first subnet for CloudFoundy"
      }
    },
    "secondSubnetNameForCloudFoundry": {
      "type": "string",
      "defaultValue": "Azure_cf_subnet_2",
      "metadata": {
        "description": "name of the second subnet for CloudFoundy"
      }
    },
    "cfSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.16.0/24",
      "metadata": {
        "description": "the CIDR block of the first subnet for CloudFoundy"
      }
    },
    "cfSecondSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.17.0/24",
      "metadata": {
        "description": "the CIDR block of the second subnet for CloudFoundy"
      }
    }
  },
  "variables": {
    "apiVersion": "2015-06-15",
    "location": "[resourceGroup().location]",
    "pubIPBaseName": "Azure_pip",
    "boshNetworkSecurityGroup": "Azure_bosh_nsg"
  },
  "resources": [
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('boshNetworkSecurityGroup')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "ssh",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "bosh-agent",
            "properties": {
              "description": "Allow bosh-agent",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "6868",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 201,
              "direction": "Inbound"
            }
          },
          {
            "name": "bosh-director",
            "properties": {
              "description": "Allow bosh-director",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "25555",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 202,
              "direction": "Inbound"
            }
          },
          {
            "name": "dns",
            "properties": {
              "description": "Allow DNS",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 203,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('virtualNetworkPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('subnetNameForBosh')]",
            "properties": {
              "addressPrefix": "[parameters('boshSubnetPrefix')]"
            }
          },
          {
            "name": "[parameters('secondSubnetNameForBosh')]",
            "properties": {
              "addressPrefix": "[parameters('boshSecondSubnetPrefix')]"
            }
          },
          {
            "name": "[parameters('subnetNameForCloudFoundry')]",
            "properties": {
              "addressPrefix": "[parameters('cfSubnetPrefix')]"
            }
          },
          {
            "name": "[parameters('secondSubnetNameForCloudFoundry')]",
            "properties": {
              "addressPrefix": "[parameters('cfSecondSubnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(variables('pubIPBaseName'),'_bosh')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "static"
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(variables('pubIPBaseName'), '_cf-bats')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "static"
      }
    }
  ]
}
